bottom_ navi & lap_imges has been corrected

--- a/products/all.html
+++ b/products/all.html
@@ -506,7 +506,7 @@
                 <div class="event_product_images">
                   <a href=""
                     ><img
-                      src="../public/images/All produscts img/image 30 (5).png"
+                      src="../public/images/All produscts img/image 30 (6).png"
                       alt=""
                   /></a>
                 </div>
@@ -538,7 +538,7 @@
                 <div class="event_product_images">
                   <a href=""
                     ><img
-                      src="../public/images/All produscts img/image 30 (5).png"
+                      src="../public/images/All produscts img/image 30 (7).png"
                       alt=""
                   /></a>
                 </div>
@@ -570,7 +570,7 @@
                 <div class="event_product_images">
                   <a href=""
                     ><img
-                      src="../public/images/All produscts img/image 30 (5).png"
+                      src="../public/images/All produscts img/image 30 (8).png"
                       alt=""
                   /></a>
                 </div>
@@ -602,7 +602,7 @@
                 <div class="event_product_images">
                   <a href=""
                     ><img
-                      src="../public/images/All produscts img/image 30 (5).png"
+                      src="../public/images/All produscts img/image 30 (9).png"
                       alt=""
                   /></a>
                 </div>
@@ -634,7 +634,7 @@
                 <div class="event_product_images">
                   <a href=""
                     ><img
-                      src="../public/images/All produscts img/image 30 (5).png"
+                      src="../public/images/All produscts img/image 30 (10).png"
                       alt=""
                   /></a>
                 </div>
@@ -666,7 +666,7 @@
                 <div class="event_product_images">
                   <a href=""
                     ><img
-                      src="../public/images/All produscts img/image 30 (5).png"
+                      src="../public/images/All produscts img/image 30 (11).png"
                       alt=""
                   /></a>
                 </div>
@@ -698,7 +698,7 @@
                 <div class="event_product_images">
                   <a href=""
                     ><img
-                      src="../public/images/All produscts img/image 30 (5).png"
+                      src="../public/images/All produscts img/image 30 (12).png"
                       alt=""
                   /></a>
                 </div>
@@ -730,7 +730,7 @@
                 <div class="event_product_images">
                   <a href=""
                     ><img
-                      src="../public/images/All produscts img/image 30 (5).png"
+                      src="../public/images/All produscts img/image 30 (13).png"
                       alt=""
                   /></a>
                 </div>
@@ -762,7 +762,7 @@
                 <div class="event_product_images">
                   <a href=""
                     ><img
-                      src="../public/images/All produscts img/image 30 (5).png"
+                      src="../public/images/All produscts img/image 30 (14).png"
                       alt=""
                   /></a>
                 </div>
@@ -794,7 +794,7 @@
                 <div class="event_product_images">
                   <a href=""
                     ><img
-                      src="../public/images/All produscts img/image 30 (5).png"
+                      src="../public/images/All produscts img/image 30 (15).png"
                       alt=""
                   /></a>
                 </div>
@@ -826,7 +826,7 @@
                 <div class="event_product_images">
                   <a href=""
                     ><img
-                      src="../public/images/All produscts img/image 30 (5).png"
+                      src="../public/images/All produscts img/image 30 (16).png"
                       alt=""
                   /></a>
                 </div>
@@ -858,7 +858,7 @@
                 <div class="event_product_images">
                   <a href=""
                     ><img
-                      src="../public/images/All produscts img/image 30 (5).png"
+                      src="../public/images/All produscts img/image 30 (17).png"
                       alt=""
                   /></a>
                 </div>
@@ -890,7 +890,7 @@
                 <div class="event_product_images">
                   <a href=""
                     ><img
-                      src="../public/images/All produscts img/image 30 (5).png"
+                      src="../public/images/All produscts img/image 30 (18).png"
                       alt=""
                   /></a>
                 </div>
@@ -922,7 +922,7 @@
                 <div class="event_product_images">
                   <a href=""
                     ><img
-                      src="../public/images/All produscts img/image 30 (5).png"
+                      src="../public/images/All produscts img/image 30 (19).png"
                       alt=""
                   /></a>
                 </div>
@@ -954,7 +954,7 @@
                 <div class="event_product_images">
                   <a href=""
                     ><img
-                      src="../public/images/All produscts img/image 30 (5).png"
+                      src="../public/images/All produscts img/image 30 (20).png"
                       alt=""
                   /></a>
                 </div>
@@ -986,7 +986,7 @@
                 <div class="event_product_images">
                   <a href=""
                     ><img
-                      src="../public/images/All produscts img/image 30 (5).png"
+                      src="../public/images/All produscts img/image 30 (21).png"
                       alt=""
                   /></a>
                 </div>
@@ -1018,7 +1018,7 @@
                 <div class="event_product_images">
                   <a href=""
                     ><img
-                      src="../public/images/All produscts img/image 30 (5).png"
+                      src="../public/images/All produscts img/image 30 (22).png"
                       alt=""
                   /></a>
                 </div>
@@ -1050,7 +1050,7 @@
                 <div class="event_product_images">
                   <a href=""
                     ><img
-                      src="../public/images/All produscts img/image 30 (5).png"
+                      src="../public/images/All produscts img/image 30 (23).png"
                       alt=""
                   /></a>
                 </div>
@@ -1082,7 +1082,7 @@
                 <div class="event_product_images">
                   <a href=""
                     ><img
-                      src="../public/images/All produscts img/image 30 (5).png"
+                      src="../public/images/All produscts img/image 30 (24).png"
                       alt=""
                   /></a>
                 </div>
@@ -1114,7 +1114,7 @@
                 <div class="event_product_images">
                   <a href=""
                     ><img
-                      src="../public/images/All produscts img/image 30 (5).png"
+                      src="../public/images/All produscts img/image 30 (25).png"
                       alt=""
                   /></a>
                 </div>
@@ -1157,30 +1157,20 @@
                 />
               </a>
               <span>1</span>
-              <a class="choosen"
-                >2
-                <img
-                  src="..//public/images/All produscts img/sariq.svg"
-                  alt=""
-                />
-              </a>
+              <a class="choosen"><span>2</span> </a>
               <span>3</span>
-              <a class="choosen2"
-                >4
-                <img
-                  src="..//public/images/All produscts img/seriy.svg"
-                  alt=""
-                />
-              </a>
+              <a class="choosen2"><span>4</span> </a>
               <span>5</span>
               <span>...</span>
               <span>20</span>
               <a class="right_box">
                 <img
+                  class="right_cursor"
                   src="..//public/images/All produscts img/o'ng next 1 (1).svg"
                   alt=""
                 />
                 <img
+                  class="right_sicle"
                   src="..//public/images/All produscts img/o'ng.svg"
                   alt=""
                 />
